# git_notes

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
docs/: index.md
scripts/: build_wheel_package.bat  deploy_docs_to_github.bat  local_mkdoc_build.bat  venv_setup.bat
search/: search_index.json
